--- a/layers/osmus_trails.yml
+++ b/layers/osmus_trails.yml
@@ -12,6 +12,7 @@ layers:
         geometry: line
         min_zoom: 5
         include_when:
+          &trail_include_filter
           highway:
             - bridleway
             - cycleway
@@ -32,84 +33,89 @@ layers:
               ski:nordic: __any__
               wheelchair: __any__
         exclude_when:
+          &trail_exclude_filter
           footway: __any__
           golf: cartpath
           indoor: __any__
         attributes:
           - key: OSM_ID
             value: "${feature.id}"
-          - key: highway
-            tag_value: highway
-          - key: piste:type
-            tag_value: piste:type
-          - key: bridge
-            tag_value: bridge
-          - key: ford
-            tag_value: ford
-          - key: tunnel
-            tag_value: tunnel
-          - key: trailblazed
-            tag_value: trailblazed
-          - key: symbol
-            tag_value: symbol
-          - key: colour
-            tag_value: colour
           - key: access
             tag_value: access
-          - key: toll
-            tag_value: toll
-          - key: foot
-            tag_value: foot
-          - key: bicycle
-            tag_value: bicycle
-          - key: horse
-            tag_value: horse
-          - key: dog
-            tag_value: dog
-          - key: ski
-            tag_value: ski
-          - key: ski:nordic
-            tag_value: ski:nordic
-          - key: inline_skates
-            tag_value: inline_skates
-          - key: vehicle
-            tag_value: vehicle
-          - key: motor_vehicle
-            tag_value: motor_vehicle
           - key: atv
             tag_value: atv
-          - key: motorcycle
-            tag_value: motorcycle
-          - key: moped
-            tag_value: moped
-          - key: motorcar
-            tag_value: motorcar
-          - key: wheelchair
-            tag_value: wheelchair
+          - key: bicycle
+            tag_value: bicycle
+          - key: bridge
+            tag_value: bridge
+          - key: canoe
+            tag_value: canoe
+          - key: dog
+            tag_value: dog
+          - key: foot
+            tag_value: foot
+          - key: ford
+            tag_value: ford
+          - key: highway
+            tag_value: highway
+          - key: hiking
+            tag_value: hiking
+          - key: horse
+            tag_value: horse
+          - key: incline
+            tag_value: incline
+          - key: informal
+            tag_value: informal
+          - key: inline_skates
+            tag_value: inline_skates
+          - key: motor_vehicle
+            tag_value: motor_vehicle
+          - key: mtb
+            tag_value: mtb
           - key: oneway
             tag_value: oneway
           - key: oneway:bicycle
             tag_value: oneway:bicycle
-          - key: incline
-            tag_value: incline
-          - key: width
-            tag_value: width
-          - key: mtb
-            tag_value: mtb
-          - key: surface
-            tag_value: surface
+          - key: oneway:foot
+            tag_value: oneway:foot
+          - key: operator
+            tag_value: operator
+          - key: piste:type
+            tag_value: piste:type
+          - key: ramp:bicycle
+            tag_value: ramp:bicycle
+          - key: ramp:wheelchair
+            tag_value: ramp:wheelchair
+          - key: sac_scale
+            tag_value: sac_scale
+          - key: ski
+            tag_value: ski
+          - key: ski:nordic
+            tag_value: ski:nordic
           - key: smoothness
             tag_value: smoothness
+          - key: snowmobile
+            tag_value: snowmobile
+          - key: surface
+            tag_value: surface
+          - key: symbol
+            tag_value: symbol
+          - key: toll
+            tag_value: toll
           - key: tracktype
             tag_value: tracktype
           - key: trail_visibility
             tag_value: trail_visibility
-          - key: sac_scale
-            tag_value: sac_scale
-          - key: informal
-            tag_value: informal
-          - key: operator
-            tag_value: operator
+          - key: trailblazed
+            tag_value: trailblazed
+          - key: tunnel
+            tag_value: tunnel
+          - key: vehicle
+            tag_value: vehicle
+          - key: wheelchair
+            tag_value: wheelchair
+          - key: width
+            tag_value: width
   - id: trail_name
     features:
       - source: osm
@@ -118,30 +124,8 @@ layers:
         include_when:
           __all__:
             name: __any__
-            __any__:
-              highway:
-                - bridleway
-                - cycleway
-                - footway
-                - path
-                - steps
-                - via_ferrata
-              __all__:
-                # we only care about tracks if they have some trail access tag
-                - highway: track
-                - __any__:
-                  atv: __any__
-                  bicycle: __any__
-                  dog: __any__
-                  foot: __any__
-                  horse: __any__
-                  ski: __any__
-                  ski:nordic: __any__
-                  wheelchair: __any__
-        exclude_when:
-          footway: __any__
-          golf: cartpath
-          indoor: __any__
+            __any__: *trail_include_filter
+        exclude_when: *trail_exclude_filter
         attributes:
           - key: name
             tag_value: name
@@ -152,27 +136,148 @@ layers:
         buffer: 5
   - id: trail_poi
     features:
+      # collect ranger stations mapped as nodes
+      - source: osm
+        geometry: point
+        min_zoom: 5
+        include_when:
+          amenity:
+            - ranger_station
+        exclude_when:
+          highway:
+            - trailhead
+        attributes:
+          - key: OSM_TYPE
+            value: "node"
+          - key: OSM_ID
+            value: "${feature.id}"
+          - key: access
+            tag_value: access
+          - key: amenity
+            tag_value: amenity
+          - key: name
+            tag_value: name
+          - key: opening_hours
+            tag_value: opening_hours
+          - key: operator
+            tag_value: operator
+          - key: wheelchair
+            tag_value: wheelchair
+      # collect ranger stations mapped as areas
+      - source: osm
+        geometry: polygon_centroid_if_convex
+        min_zoom: 5
+        include_when:
+          amenity:
+            - ranger_station
+        attributes:
+          - key: OSM_TYPE
+            value: "way"
+          - key: OSM_ID
+            value: "${feature.id}"
+          - key: access
+            tag_value: access
+          - key: amenity
+            tag_value: amenity
+          - key: name
+            tag_value: name
+          - key: opening_hours
+            tag_value: opening_hours
+          - key: operator
+            tag_value: operator
+          - key: wheelchair
+            tag_value: wheelchair
       - source: osm
         geometry: point
         min_zoom: 7
         include_when:
           highway:
             - trailhead
-          amenity:
-            - ranger_station
         attributes:
           - key: OSM_ID
             value: "${feature.id}"
-          - key: highway
-            tag_value: highway
-          - key: name
-            tag_value: name
           - key: access
             tag_value: access
-          - key: wheelchair
-            tag_value: wheelchair
+          - key: atv
+            tag_value: atv
+          - key: bicycle
+            tag_value: bicycle
+          - key: canoe
+            tag_value: canoe
+          - key: dog
+            tag_value: dog
+          - key: foot
+            tag_value: foot
+          - key: highway
+            tag_value: highway
+          - key: hiking
+            tag_value: hiking
+          - key: horse
+            tag_value: horse
+          - key: information
+            tag_value: information
+          - key: mtb
+            tag_value: mtb
+          - key: name
+            tag_value: name
+          - key: opening_hours
+            tag_value: opening_hours
           - key: operator
             tag_value: operator
+          - key: ski
+            tag_value: ski
+          - key: ski:nordic
+            tag_value: ski:nordic
+          - key: snowmobile
+            tag_value: snowmobile
+          - key: wheelchair
+            tag_value: wheelchair
+      - source: osm
+        geometry: point
+        # route markers are abundant so restrict to higher zooms
+        min_zoom: 12
+        include_when:
+          information:
+            - route_marker
+            - guidepost
+        exclude_when:
+          amenity:
+            - ranger_station
+          highway:
+            - trailhead
+        attributes:
+          - key: OSM_ID
+            value: "${feature.id}"
+          - key: atv
+            tag_value: atv
+          - key: bicycle
+            tag_value: bicycle
+          - key: canoe
+            tag_value: canoe
+          - key: dog
+            tag_value: dog
+          - key: foot
+            tag_value: foot
+          - key: hiking
+            tag_value: hiking
+          - key: horse
+            tag_value: horse
+          - key: information
+            tag_value: information
+          - key: mtb
+            tag_value: mtb
+          - key: name
+            tag_value: name
+          - key: operator
+            tag_value: operator
+          - key: ski
+            tag_value: ski
+          - key: ski:nordic
+            tag_value: ski:nordic
+          - key: snowmobile
+            tag_value: snowmobile
+          - key: wheelchair
+            tag_value: wheelchair
 args:
   area:
     description: Geofabrik area to download
