--- a/layers/osmus_trails.yml
+++ b/layers/osmus_trails.yml
@@ -35,6 +35,9 @@ layers:
             - canoe: portage
         exclude_when:
           indoor: __any__
+          man_made: pier
+          public_transport: platform
+          railway: platform
         attributes:
           &trail_attributes
           - key: OSM_ID
@@ -126,6 +129,9 @@ layers:
           # ignore sidewalks, crossings, access aisles, etc.
           footway: __any__
           indoor: __any__
+          man_made: pier
+          public_transport: platform
+          railway: platform
         attributes: *trail_attributes
       - source: osm
         geometry: line
@@ -138,6 +144,9 @@ layers:
             - lane
             - crossing
           indoor: __any__
+          man_made: pier
+          public_transport: platform
+          railway: platform
         attributes: *trail_attributes
       - source: osm
         geometry: line
@@ -154,6 +163,8 @@ layers:
             - fairway
             - link
           canoe: __any__
+        exclude_when:
+          indoor: __any__
         attributes:
           - key: OSM_ID
             value: "${feature.id}"
@@ -167,6 +178,8 @@ layers:
             tag_value: canoe
           - key: dog
             tag_value: dog
+          - key: name
+            tag_value: name
           - key: tunnel
             tag_value: tunnel
           - key: width
@@ -203,6 +216,7 @@ layers:
         include_when:
           amenity: ranger_station
         attributes:
+          # FIXME: `way` type is incorrect if feature is a multipolygon 
           - key: OSM_TYPE
             value: "way"
           - key: OSM_ID
@@ -247,6 +261,8 @@ layers:
             tag_value: hiking
           - key: horse
             tag_value: horse
+          - key: informal
+            tag_value: informal
           - key: mtb
             tag_value: mtb
           - key: name
@@ -279,6 +295,8 @@ layers:
             tag_value: canoe
           - key: dog
             tag_value: dog
+          - key: informal
+            tag_value: informal
           - key: name
             tag_value: name
           - key: opening_hours
