--- a/layers/osmus_trails.yml
+++ b/layers/osmus_trails.yml
@@ -50,8 +50,6 @@ layers:
             tag_value: bicycle
           - key: bridge
             tag_value: bridge
-          - key: canoe
-            tag_value: canoe
           - key: check_date
             tag_value: check_date
           - key: dog
@@ -90,6 +88,8 @@ layers:
             tag_value: operator
           - key: piste:type
             tag_value: piste:type
+          - key: portage
+            tag_value: portage
           - key: ramp:bicycle
             tag_value: ramp:bicycle
           - key: ramp:wheelchair
@@ -196,6 +196,8 @@ layers:
             tag_value: oneway:canoe
           - key: name
             tag_value: name
+          - key: portage
+            tag_value: portage
           - key: survey:date
             tag_value: survey:date
           - key: tidal
